--- a/VidCoder/packages.config
+++ b/VidCoder/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="FastMember" version="1.0.0.11" targetFramework="net45" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.5" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
