Continued WindowManager work

--- a/VidCoder/packages.config
+++ b/VidCoder/packages.config
@@ -14,5 +14,6 @@
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net45" />
   <package id="Rx-XAML" version="2.2.5" targetFramework="net45" />
   <package id="Splat" version="1.6.2" targetFramework="net45" />
+  <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
   <package id="ValueInjecter" version="3.0.1.1" targetFramework="net45" />
 </packages>
