--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -215,6 +215,15 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.Unity">
+      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.Configuration">
+      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.Configuration.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity.RegistrationByConvention">
+      <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.RegistrationByConvention.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -629,6 +638,7 @@
     <Compile Include="Services\Windows\IWindowManager.cs" />
     <Compile Include="Services\Windows\WindowDefinition.cs" />
     <Compile Include="Services\Windows\WindowManager.cs" />
+    <Compile Include="Services\Windows\WindowMenuItemViewModel.cs" />
     <Compile Include="Services\Windows\WindowPlacer.cs" />
     <Compile Include="Utilities\AdvancedOptionsParsing.cs" />
     <Compile Include="Utilities\CodecUtilities.cs" />
@@ -645,6 +655,7 @@
     <Compile Include="Settings.cs" />
     <Compile Include="Utilities\ListSynchronizer\TwoListSynchronizer.cs" />
     <Compile Include="Utilities\MathUtilities.cs" />
+    <Compile Include="Utilities\MvvmUtilities.cs" />
     <Compile Include="Utilities\NativeMethods.cs" />
     <Compile Include="Utilities\ParentProcessUtilities.cs" />
     <Compile Include="Utilities\PseudoLocalizer.cs" />
@@ -697,7 +708,7 @@
     <Compile Include="ViewModel\DataModels\ColumnViewModel.cs" />
     <Compile Include="ViewModel\DataModels\EncodeResultViewModel.cs" />
     <Compile Include="ViewModel\DataModels\TitleSelectionViewModel.cs" />
-    <Compile Include="ViewModel\LogViewModel.cs" />
+    <Compile Include="ViewModel\LogWindowViewModel.cs" />
     <Compile Include="ViewModel\Panels\PanelViewModel.cs" />
     <Compile Include="ViewModel\Panels\PicturePanelViewModel.cs" />
     <Compile Include="ViewModel\QueueTitlesWindowViewModel.cs" />
@@ -798,7 +809,7 @@
     <Compile Include="ViewModel\DataModels\MixdownViewModel.cs" />
     <Compile Include="ViewModel\DataModels\PresetViewModel.cs" />
     <Compile Include="ViewModel\DataModels\TargetStreamViewModel.cs" />
-    <Compile Include="ViewModel\EncodingViewModel.cs" />
+    <Compile Include="ViewModel\EncodingWindowViewModel.cs" />
     <Compile Include="Model\SourceOption.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -818,7 +829,7 @@
     <Compile Include="ViewModel\DataModels\SourceSubtitleViewModel.cs" />
     <Compile Include="ViewModel\DataModels\SrtSubtitleViewModel.cs" />
     <Compile Include="ViewModel\OptionsDialogViewModel.cs" />
-    <Compile Include="ViewModel\PreviewViewModel.cs" />
+    <Compile Include="ViewModel\PreviewWindowViewModel.cs" />
     <Compile Include="ViewModel\SubtitleDialogViewModel.cs" />
     <Compile Include="View\ApplyUpdateConfirmation.xaml.cs">
       <DependentUpon>ApplyUpdateConfirmation.xaml</DependentUpon>
