--- a/VidCoder/app.config
+++ b/VidCoder/app.config
@@ -8,7 +8,7 @@
 	</appSettings>
 
   <startup useLegacyV2RuntimeActivationPolicy="true">
-    <supportedRuntime version="v4.0" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
 
   <runtime>
