Updated Handbrake core. Fixed build scripts to point to VS 2015.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 Installer/BuiltInstallers/*
+Flags/*
+misc/*
+packages/*
+ResourcesImport/*
+Screenshots/*
+TestFiles/*
+*.pdn
+*/bin/*
+*/obj/*
+*gen.iss
+*.suo
+*.csproj.user
+*.user
+Installer/Files/*
