--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ keywords: blu-ray, rip, video, stuffthings
 description: > # this means to ignore newlines until "baseurl:"
   Witty description here.
 
-#baseurl: /slim-pickins-jekyll-theme
+baseurl: /VidCoder
 #url: https://chrisanthropic.github.io
 
 # Exclude our ruby stuff
