Plugged in real github/facebook links

--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -1,5 +1,5 @@
 - title: "facebook"
-  href: "#"
+  href: "https://www.facebook.com/VidCoderSoftware/"
 
 - title: "github"
-  href: "https://github.com/chrisanthropic/slim-pickins-jekyll-theme"
+  href: "https://github.com/RandomEngy/VidCoder"
