--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -3,22 +3,18 @@
 
 - title: "documentation"
   subcategories:
-    - subtitle: "sass"
-      subhref: "/documentation/sass.html"
-    - subtitle: "grid"
-      subhref: "/documentation/grid.html"
-    - subtitle: "navigation"
-      subhref: "/documentation/nav.html"
-    - subtitle: "banner"
-      subhref: "/documentation/banner.html"
-    - subtitle: "sticky footer"
-      subhref: "/documentation/footer.html"
-    - subtitle: "rakefile"
-      subhref: "/documentation/rakefile.html"
-    - subtitle: "image_optim"
-      subhref: "/documentation/image-optim.html"
-    - subtitle: "SEO"
-      subhref: "/documentation/seo.html"
+    - subtitle: "Ripping DVDs or Blu-rays"
+      subhref: "/Documentation/RippingDiscs.html"
+    - subtitle: "Video Quality Options"
+      subhref: "/Documentation/VideoQualityOptions.html"
+    - subtitle: "Submitting Bug Reports"
+      subhref: "/Documentation/SubmittingBugReports.html"
+    - subtitle: "VidCoder Beta"
+      subhref: "/Documentation/Beta.html"
+    - subtitle: "Output File Naming"
+      subhref: "/Documentation/OutputFileNaming.html"
+    - subtitle: "Other Resources"
+      subhref: "/Documentation/OtherResources.html"
       
 - title: "Issues"
   external: "https://github.com/RandomEngy/VidCoder/issues"
